# Zeeman_modelling

./: .gitignore  PYMC.ipynb  README.md  README.rst  StokesIFit.py  StokesVFitting.ipynb  Zeeman.py  joint_fitter.ipynb  pymc_fit.py  pyproject.toml
2023_07_05/: info.txt
2023_07_07/: info.txt
2023_07_10/: info.txt
2023_07_11/: info.txt
2023_07_12/: info.txt
2023_07_18/: metropolis_PyMC.txt  nuts_PyMC.txt
2023_07_25/: LSq_fit_info.txt
DR21W/: output.txt
MCMC/: info.txt
QU_test/: QUfitter_test.ipynb  test_m1_dynesty.json
QU_test/test_m1_dynesty/: m1_dynesty.pickle  m1_result.json  m1_resume.pickle
W51C/: output.txt
src/: bayesian.py
src/zeeman_modeling/: Bayesian.py  Funcitons.py  Functions.py  Plot.py  Zeeman.py  bayesian.py  func.py  plot.py
src/zeeman_modeling/scripts/: func.py  main.py  zeeman_modeling.py
test/: output.txt
