[project]
name = "Zeeman Modeling"
dynamic = ["readme"]
version = "0.1"
authors = [
         {name = "Jui-Teng (Roy) Hsu", email = "hjuiteng@gmail.com" },
         {name = "Preshanth Jagannathan", email = "pjaganna@nrao.edu" }]
description = "Automated Zeeman analysis spectrum fitter"
dependencies = [
    'pymc>=5.0',
    'scipy>=1.3',
    'numpy>=1.8.0',
    'astropy',
    'matplotlib']
license = {file="LICENSE"}
requires-python = ">=3.9"
[project.urls]
"Homepage" = "https://github.com/preshanth/Zeeman_modelling" 
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: MIT License",
            "Operating System :: OS Independent",
            ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
plumber = "plumber.scripts.plumber:main"
parang_finder = "plumber.scripts.parang_finder:main"

[tool.setuptools]
zip_safe = false
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ['*.txt']
