[project]
name = "Zeeman_modeling"
dynamic = ["readme"]
version = "0.1"
authors = [
         {name = "Jui-Teng (Roy) Hsu", email = "hjuiteng@gmail.com" },
         {name = "Preshanth Jagannathan", email = "pjaganna@nrao.edu" }]
description = "Automated Zeeman analysis spectrum fitter"
dependencies = [
    'pymc>=5.0',
    'scipy>=1.3',
    'numpy>=1.8.0',
    'astropy',
    'corner',
    'arviz',
    'matplotlib']
license = {file="LICENSE"}
requires-python = ">=3.9"
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: MIT License",
            "Operating System :: OS Independent",
            ]
[project.urls]
"Homepage" = "https://github.com/preshanth/Zeeman_modelling" 

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
zeeman_modeling = "zeeman_modeling.scripts.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ['*.txt']
